# escola

./: db.sqlite3  main.py  pyproject.toml
aluno/: forms.py  models.py  urls.py  views.py
aluno/migrations/: 0001_initial.py
aluno/templates/: aluno.html  cadastrar.html  cadastro.html
core/: settings.py  urls.py
home/templates/: home.html
