[project]
name = "escola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "django>=5.2",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "requests>=2.32.3",
    "ruff>=0.11.7",
]
